<resources>
    <string name="app_name">tinderAppProject</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="restaurantPhone">Restaurant Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="editLabel">Edit</string>
    <string name="restaurantSite">Restaurant Website</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up!</string>
    <string name="LoginAsGuest">Login As Guest</string>
</resources>